--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <title>online Shopping </title>
-<link>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
 </html>
